# solana-native-rust-counter

./: .gitignore  readme.md
client/: package.json
client/src/: App.tsx
program/: Cargo.toml  counter-data-keypair.json
program/src/: lib.rs
tests/: counter-data-keypair.json  data_account.ts  index.test.ts  test1.ts  types.ts
